Keep track of group admin actions (and update foreign admins properly)